# WGGIOS_shopping_list

./: .gitignore  CMakeLists.txt  ContainerError.cpp  ContainerError.h  Product.cpp  Product.h  ProductLiters.cpp  ProductLiters.h  ProductPieces.cpp  ProductPieces.h  ProductWeight.cpp  ProductWeight.h  ProgramSupport.cpp  ProgramSupport.h  README.md  ShoppingList.cpp  ShoppingList.h  ShoppingListError.cpp  ShoppingListError.h  SmartContainer.cpp  SmartContainer.h  main.cpp  pomocnik.cpp  stdin  stdin-isempty.txt  stdin-toolarge.txt  temat3.txt  theShoppingList.cpp  theShoppingList.h
